Interpreter/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CORDER
    CORIZQ
    IGUAL
    MAYORQ
    PTC
    REVAL

Grammar

Rule 0     S' -> inicio
Rule 1     inicio -> lista_expresiones
Rule 2     inicio -> expresion
Rule 3     inicio -> comentario_una_linea
Rule 4     inicio -> comentario_multi_linea
Rule 5     lista_expresiones -> expresion PTCOMA
Rule 6     lista_expresiones -> expresion
Rule 7     lista_expresiones -> lista_expresiones expresion PTCOMA
Rule 8     lista_expresiones -> lista_expresiones expresion
Rule 9     expresion -> WHILE PARIZQ expresion PARDER LLAVE_IZQ lista_expresiones LLAVE_DER
Rule 10    expresion -> DO LLAVE_IZQ lista_expresiones LLAVE_DER WHILE PARIZQ expresion PARDER PTCOMA
Rule 11    expresion -> IF PARIZQ expresion PARDER LLAVE_IZQ lista_expresiones LLAVE_DER
Rule 12    expresion -> IF PARIZQ expresion PARDER LLAVE_IZQ lista_expresiones LLAVE_DER ELSE LLAVE_IZQ lista_expresiones LLAVE_DER
Rule 13    expresion -> IF PARIZQ expresion PARDER LLAVE_IZQ lista_expresiones LLAVE_DER ELSE expresion
Rule 14    expresion -> ENTERO
Rule 15    expresion -> DECIMAL
Rule 16    expresion -> FOR PARIZQ tipo ID ASIGNACION expresion PTCOMA expresion PTCOMA expresion PARDER LLAVE_IZQ lista_expresiones LLAVE_DER
Rule 17    expresion -> FOR PARIZQ ID ASIGNACION expresion PTCOMA expresion PTCOMA expresion PARDER LLAVE_IZQ lista_expresiones LLAVE_DER
Rule 18    expresion -> TRUE
Rule 19    expresion -> FALSE
Rule 20    expresion -> CARACTER
Rule 21    expresion -> CADENA
Rule 22    expresion -> ID
Rule 23    expresion -> MENOS expresion
Rule 24    expresion -> expresion MAS expresion
Rule 25    expresion -> expresion MENOS expresion
Rule 26    expresion -> expresion POR expresion
Rule 27    expresion -> expresion DIVIDIDO expresion
Rule 28    expresion -> expresion POTENCIA expresion
Rule 29    expresion -> expresion MODULO expresion
Rule 30    expresion -> tipo ID PTCOMA
Rule 31    expresion -> ID ASIGNACION expresion PTCOMA
Rule 32    tipo -> INT
Rule 33    tipo -> FLOAT
Rule 34    tipo -> CHAR
Rule 35    tipo -> STRING
Rule 36    tipo -> BOOL
Rule 37    expresion -> PRINTLN PARIZQ expresion PARDER
Rule 38    expresion -> tipo ID ASIGNACION expresion PTCOMA
Rule 39    expresion -> expresion OR_LOGICO expresion
Rule 40    expresion -> expresion AND_LOGICO expresion
Rule 41    expresion -> NOT_LOGICO expresion
Rule 42    expresion -> expresion XOR_LOGICO expresion
Rule 43    expresion -> BREAK PTCOMA
Rule 44    expresion -> CONTINUE PTCOMA
Rule 45    expresion -> expresion GE expresion
Rule 46    expresion -> expresion LE expresion
Rule 47    expresion -> expresion LT expresion
Rule 48    expresion -> expresion GT expresion
Rule 49    expresion -> expresion EQ expresion
Rule 50    expresion -> expresion NE expresion
Rule 51    expresion -> ID INCREMENTO
Rule 52    expresion -> ID DECREMENTO
Rule 53    comentario_multi_linea -> COMENTARIO_MULTILINEA
Rule 54    comentario_una_linea -> COMENTARIO_UNA_LINEA
Rule 55    expresion -> PARIZQ expresion PARDER
Rule 56    expresion -> SWITCH PARIZQ expresion PARDER LLAVE_IZQ lista_cases_opt LLAVE_DER
Rule 57    lista_cases_opt -> lista_cases case_default
Rule 58    lista_cases_opt -> lista_cases
Rule 59    lista_cases -> lista_cases case
Rule 60    lista_cases -> case
Rule 61    case -> CASE expresion DOSPUNTOS lista_expresiones
Rule 62    case_default -> DEFAULT DOSPUNTOS lista_expresiones
Rule 63    expresion -> ID ID

Terminals, with rules where they appear

AND_LOGICO           : 40
ASIGNACION           : 16 17 31 38
BOOL                 : 36
BREAK                : 43
CADENA               : 21
CARACTER             : 20
CASE                 : 61
CHAR                 : 34
COMENTARIO_MULTILINEA : 53
COMENTARIO_UNA_LINEA : 54
CONTINUE             : 44
CORDER               : 
CORIZQ               : 
DECIMAL              : 15
DECREMENTO           : 52
DEFAULT              : 62
DIVIDIDO             : 27
DO                   : 10
DOSPUNTOS            : 61 62
ELSE                 : 12 13
ENTERO               : 14
EQ                   : 49
FALSE                : 19
FLOAT                : 33
FOR                  : 16 17
GE                   : 45
GT                   : 48
ID                   : 16 17 22 30 31 38 51 52 63 63
IF                   : 11 12 13
IGUAL                : 
INCREMENTO           : 51
INT                  : 32
LE                   : 46
LLAVE_DER            : 9 10 11 12 12 13 16 17 56
LLAVE_IZQ            : 9 10 11 12 12 13 16 17 56
LT                   : 47
MAS                  : 24
MAYORQ               : 
MENOS                : 23 25
MODULO               : 29
NE                   : 50
NOT_LOGICO           : 41
OR_LOGICO            : 39
PARDER               : 9 10 11 12 13 16 17 37 55 56
PARIZQ               : 9 10 11 12 13 16 17 37 55 56
POR                  : 26
POTENCIA             : 28
PRINTLN              : 37
PTC                  : 
PTCOMA               : 5 7 10 16 16 17 17 30 31 38 43 44
REVAL                : 
STRING               : 35
SWITCH               : 56
TRUE                 : 18
WHILE                : 9 10
XOR_LOGICO           : 42
error                : 

Nonterminals, with rules where they appear

case                 : 59 60
case_default         : 57
comentario_multi_linea : 4
comentario_una_linea : 3
expresion            : 2 5 6 7 8 9 10 11 12 13 13 16 16 16 17 17 17 23 24 24 25 25 26 26 27 27 28 28 29 29 31 37 38 39 39 40 40 41 42 42 45 45 46 46 47 47 48 48 49 49 50 50 55 56 61
inicio               : 0
lista_cases          : 57 58 59
lista_cases_opt      : 56
lista_expresiones    : 1 7 8 9 10 11 12 12 13 16 17 61 62
tipo                 : 16 30 38

Parsing method: LALR

state 0

    (0) S' -> . inicio
    (1) inicio -> . lista_expresiones
    (2) inicio -> . expresion
    (3) inicio -> . comentario_una_linea
    (4) inicio -> . comentario_multi_linea
    (5) lista_expresiones -> . expresion PTCOMA
    (6) lista_expresiones -> . expresion
    (7) lista_expresiones -> . lista_expresiones expresion PTCOMA
    (8) lista_expresiones -> . lista_expresiones expresion
    (9) expresion -> . WHILE PARIZQ expresion PARDER LLAVE_IZQ lista_expresiones LLAVE_DER
    (10) expresion -> . DO LLAVE_IZQ lista_expresiones LLAVE_DER WHILE PARIZQ expresion PARDER PTCOMA
    (11) expresion -> . IF PARIZQ expresion PARDER LLAVE_IZQ lista_expresiones LLAVE_DER
    (12) expresion -> . IF PARIZQ expresion PARDER LLAVE_IZQ lista_expresiones LLAVE_DER ELSE LLAVE_IZQ lista_expresiones LLAVE_DER
    (13) expresion -> . IF PARIZQ expresion PARDER LLAVE_IZQ lista_expresiones LLAVE_DER ELSE expresion
    (14) expresion -> . ENTERO
    (15) expresion -> . DECIMAL
    (16) expresion -> . FOR PARIZQ tipo ID ASIGNACION expresion PTCOMA expresion PTCOMA expresion PARDER LLAVE_IZQ lista_expresiones LLAVE_DER
    (17) expresion -> . FOR PARIZQ ID ASIGNACION expresion PTCOMA expresion PTCOMA expresion PARDER LLAVE_IZQ lista_expresiones LLAVE_DER
    (18) expresion -> . TRUE
    (19) expresion -> . FALSE
    (20) expresion -> . CARACTER
    (21) expresion -> . CADENA
    (22) expresion -> . ID
    (23) expresion -> . MENOS expresion
    (24) expresion -> . expresion MAS expresion
    (25) expresion -> . expresion MENOS expresion
    (26) expresion -> . expresion POR expresion
    (27) expresion -> . expresion DIVIDIDO expresion
    (28) expresion -> . expresion POTENCIA expresion
    (29) expresion -> . expresion MODULO expresion
    (30) expresion -> . tipo ID PTCOMA
    (31) expresion -> . ID ASIGNACION expresion PTCOMA
    (37) expresion -> . PRINTLN PARIZQ expresion PARDER
    (38) expresion -> . tipo ID ASIGNACION expresion PTCOMA
    (39) expresion -> . expresion OR_LOGICO expresion
    (40) expresion -> . expresion AND_LOGICO expresion
    (41) expresion -> . NOT_LOGICO expresion
    (42) expresion -> . expresion XOR_LOGICO expresion
    (43) expresion -> . BREAK PTCOMA
    (44) expresion -> . CONTINUE PTCOMA
    (45) expresion -> . expresion GE expresion
    (46) expresion -> . expresion LE expresion
    (47) expresion -> . expresion LT expresion
    (48) expresion -> . expresion GT expresion
    (49) expresion -> . expresion EQ expresion
    (50) expresion -> . expresion NE expresion
    (51) expresion -> . ID INCREMENTO
    (52) expresion -> . ID DECREMENTO
    (55) expresion -> . PARIZQ expresion PARDER
    (56) expresion -> . SWITCH PARIZQ expresion PARDER LLAVE_IZQ lista_cases_opt LLAVE_DER
    (63) expresion -> . ID ID
    (54) comentario_una_linea -> . COMENTARIO_UNA_LINEA
    (53) comentario_multi_linea -> . COMENTARIO_MULTILINEA
    (32) tipo -> . INT
    (33) tipo -> . FLOAT
    (34) tipo -> . CHAR
    (35) tipo -> . STRING
    (36) tipo -> . BOOL

    WHILE           shift and go to state 6
    DO              shift and go to state 8
    IF              shift and go to state 9
    ENTERO          shift and go to state 10
    DECIMAL         shift and go to state 11
    FOR             shift and go to state 12
    TRUE            shift and go to state 15
    FALSE           shift and go to state 16
    CARACTER        shift and go to state 17
    CADENA          shift and go to state 18
    ID              shift and go to state 14
    MENOS           shift and go to state 19
    PRINTLN         shift and go to state 20
    NOT_LOGICO      shift and go to state 21
    BREAK           shift and go to state 22
    CONTINUE        shift and go to state 23
    PARIZQ          shift and go to state 7
    SWITCH          shift and go to state 24
    COMENTARIO_UNA_LINEA shift and go to state 25
    COMENTARIO_MULTILINEA shift and go to state 26
    INT             shift and go to state 27
    FLOAT           shift and go to state 28
    CHAR            shift and go to state 29
    STRING          shift and go to state 30
    BOOL            shift and go to state 31

    inicio                         shift and go to state 1
    lista_expresiones              shift and go to state 2
    expresion                      shift and go to state 3
    comentario_una_linea           shift and go to state 4
    comentario_multi_linea         shift and go to state 5
    tipo                           shift and go to state 13

state 1

    (0) S' -> inicio .



state 2

    (1) inicio -> lista_expresiones .
    (7) lista_expresiones -> lista_expresiones . expresion PTCOMA
    (8) lista_expresiones -> lista_expresiones . expresion
    (9) expresion -> . WHILE PARIZQ expresion PARDER LLAVE_IZQ lista_expresiones LLAVE_DER
    (10) expresion -> . DO LLAVE_IZQ lista_expresiones LLAVE_DER WHILE PARIZQ expresion PARDER PTCOMA
    (11) expresion -> . IF PARIZQ expresion PARDER LLAVE_IZQ lista_expresiones LLAVE_DER
    (12) expresion -> . IF PARIZQ expresion PARDER LLAVE_IZQ lista_expresiones LLAVE_DER ELSE LLAVE_IZQ lista_expresiones LLAVE_DER
    (13) expresion -> . IF PARIZQ expresion PARDER LLAVE_IZQ lista_expresiones LLAVE_DER ELSE expresion
    (14) expresion -> . ENTERO
    (15) expresion -> . DECIMAL
    (16) expresion -> . FOR PARIZQ tipo ID ASIGNACION expresion PTCOMA expresion PTCOMA expresion PARDER LLAVE_IZQ lista_expresiones LLAVE_DER
    (17) expresion -> . FOR PARIZQ ID ASIGNACION expresion PTCOMA expresion PTCOMA expresion PARDER LLAVE_IZQ lista_expresiones LLAVE_DER
    (18) expresion -> . TRUE
    (19) expresion -> . FALSE
    (20) expresion -> . CARACTER
    (21) expresion -> . CADENA
    (22) expresion -> . ID
    (23) expresion -> . MENOS expresion
    (24) expresion -> . expresion MAS expresion
    (25) expresion -> . expresion MENOS expresion
    (26) expresion -> . expresion POR expresion
    (27) expresion -> . expresion DIVIDIDO expresion
    (28) expresion -> . expresion POTENCIA expresion
    (29) expresion -> . expresion MODULO expresion
    (30) expresion -> . tipo ID PTCOMA
    (31) expresion -> . ID ASIGNACION expresion PTCOMA
    (37) expresion -> . PRINTLN PARIZQ expresion PARDER
    (38) expresion -> . tipo ID ASIGNACION expresion PTCOMA
    (39) expresion -> . expresion OR_LOGICO expresion
    (40) expresion -> . expresion AND_LOGICO expresion
    (41) expresion -> . NOT_LOGICO expresion
    (42) expresion -> . expresion XOR_LOGICO expresion
    (43) expresion -> . BREAK PTCOMA
    (44) expresion -> . CONTINUE PTCOMA
    (45) expresion -> . expresion GE expresion
    (46) expresion -> . expresion LE expresion
    (47) expresion -> . expresion LT expresion
    (48) expresion -> . expresion GT expresion
    (49) expresion -> . expresion EQ expresion
    (50) expresion -> . expresion NE expresion
    (51) expresion -> . ID INCREMENTO
    (52) expresion -> . ID DECREMENTO
    (55) expresion -> . PARIZQ expresion PARDER
    (56) expresion -> . SWITCH PARIZQ expresion PARDER LLAVE_IZQ lista_cases_opt LLAVE_DER
    (63) expresion -> . ID ID
    (32) tipo -> . INT
    (33) tipo -> . FLOAT
    (34) tipo -> . CHAR
    (35) tipo -> . STRING
    (36) tipo -> . BOOL

    $end            reduce using rule 1 (inicio -> lista_expresiones .)
    WHILE           shift and go to state 6
    DO              shift and go to state 8
    IF              shift and go to state 9
    ENTERO          shift and go to state 10
    DECIMAL         shift and go to state 11
    FOR             shift and go to state 12
    TRUE            shift and go to state 15
    FALSE           shift and go to state 16
    CARACTER        shift and go to state 17
    CADENA          shift and go to state 18
    ID              shift and go to state 14
    MENOS           shift and go to state 19
    PRINTLN         shift and go to state 20
    NOT_LOGICO      shift and go to state 21
    BREAK           shift and go to state 22
    CONTINUE        shift and go to state 23
    PARIZQ          shift and go to state 7
    SWITCH          shift and go to state 24
    INT             shift and go to state 27
    FLOAT           shift and go to state 28
    CHAR            shift and go to state 29
    STRING          shift and go to state 30
    BOOL            shift and go to state 31

    expresion                      shift and go to state 32
    tipo                           shift and go to state 13

state 3

    (2) inicio -> expresion .
    (5) lista_expresiones -> expresion . PTCOMA
    (6) lista_expresiones -> expresion .
    (24) expresion -> expresion . MAS expresion
    (25) expresion -> expresion . MENOS expresion
    (26) expresion -> expresion . POR expresion
    (27) expresion -> expresion . DIVIDIDO expresion
    (28) expresion -> expresion . POTENCIA expresion
    (29) expresion -> expresion . MODULO expresion
    (39) expresion -> expresion . OR_LOGICO expresion
    (40) expresion -> expresion . AND_LOGICO expresion
    (42) expresion -> expresion . XOR_LOGICO expresion
    (45) expresion -> expresion . GE expresion
    (46) expresion -> expresion . LE expresion
    (47) expresion -> expresion . LT expresion
    (48) expresion -> expresion . GT expresion
    (49) expresion -> expresion . EQ expresion
    (50) expresion -> expresion . NE expresion

  ! reduce/reduce conflict for $end resolved using rule 2 (inicio -> expresion .)
  ! shift/reduce conflict for MENOS resolved as shift
    $end            reduce using rule 2 (inicio -> expresion .)
    PTCOMA          shift and go to state 33
    WHILE           reduce using rule 6 (lista_expresiones -> expresion .)
    DO              reduce using rule 6 (lista_expresiones -> expresion .)
    IF              reduce using rule 6 (lista_expresiones -> expresion .)
    ENTERO          reduce using rule 6 (lista_expresiones -> expresion .)
    DECIMAL         reduce using rule 6 (lista_expresiones -> expresion .)
    FOR             reduce using rule 6 (lista_expresiones -> expresion .)
    TRUE            reduce using rule 6 (lista_expresiones -> expresion .)
    FALSE           reduce using rule 6 (lista_expresiones -> expresion .)
    CARACTER        reduce using rule 6 (lista_expresiones -> expresion .)
    CADENA          reduce using rule 6 (lista_expresiones -> expresion .)
    ID              reduce using rule 6 (lista_expresiones -> expresion .)
    PRINTLN         reduce using rule 6 (lista_expresiones -> expresion .)
    NOT_LOGICO      reduce using rule 6 (lista_expresiones -> expresion .)
    BREAK           reduce using rule 6 (lista_expresiones -> expresion .)
    CONTINUE        reduce using rule 6 (lista_expresiones -> expresion .)
    PARIZQ          reduce using rule 6 (lista_expresiones -> expresion .)
    SWITCH          reduce using rule 6 (lista_expresiones -> expresion .)
    INT             reduce using rule 6 (lista_expresiones -> expresion .)
    FLOAT           reduce using rule 6 (lista_expresiones -> expresion .)
    CHAR            reduce using rule 6 (lista_expresiones -> expresion .)
    STRING          reduce using rule 6 (lista_expresiones -> expresion .)
    BOOL            reduce using rule 6 (lista_expresiones -> expresion .)
    MAS             shift and go to state 34
    MENOS           shift and go to state 35
    POR             shift and go to state 36
    DIVIDIDO        shift and go to state 37
    POTENCIA        shift and go to state 38
    MODULO          shift and go to state 39
    OR_LOGICO       shift and go to state 40
    AND_LOGICO      shift and go to state 41
    XOR_LOGICO      shift and go to state 42
    GE              shift and go to state 43
    LE              shift and go to state 44
    LT              shift and go to state 45
    GT              shift and go to state 46
    EQ              shift and go to state 47
    NE              shift and go to state 48

  ! MENOS           [ reduce using rule 6 (lista_expresiones -> expresion .) ]
  ! $end            [ reduce using rule 6 (lista_expresiones -> expresion .) ]


state 4

    (3) inicio -> comentario_una_linea .

    $end            reduce using rule 3 (inicio -> comentario_una_linea .)


state 5

    (4) inicio -> comentario_multi_linea .

    $end            reduce using rule 4 (inicio -> comentario_multi_linea .)


state 6

    (9) expresion -> WHILE . PARIZQ expresion PARDER LLAVE_IZQ lista_expresiones LLAVE_DER

    PARIZQ          shift and go to state 49


state 7

    (55) expresion -> PARIZQ . expresion PARDER
    (9) expresion -> . WHILE PARIZQ expresion PARDER LLAVE_IZQ lista_expresiones LLAVE_DER
    (10) expresion -> . DO LLAVE_IZQ lista_expresiones LLAVE_DER WHILE PARIZQ expresion PARDER PTCOMA
    (11) expresion -> . IF PARIZQ expresion PARDER LLAVE_IZQ lista_expresiones LLAVE_DER
    (12) expresion -> . IF PARIZQ expresion PARDER LLAVE_IZQ lista_expresiones LLAVE_DER ELSE LLAVE_IZQ lista_expresiones LLAVE_DER
    (13) expresion -> . IF PARIZQ expresion PARDER LLAVE_IZQ lista_expresiones LLAVE_DER ELSE expresion
    (14) expresion -> . ENTERO
    (15) expresion -> . DECIMAL
    (16) expresion -> . FOR PARIZQ tipo ID ASIGNACION expresion PTCOMA expresion PTCOMA expresion PARDER LLAVE_IZQ lista_expresiones LLAVE_DER
    (17) expresion -> . FOR PARIZQ ID ASIGNACION expresion PTCOMA expresion PTCOMA expresion PARDER LLAVE_IZQ lista_expresiones LLAVE_DER
    (18) expresion -> . TRUE
    (19) expresion -> . FALSE
    (20) expresion -> . CARACTER
    (21) expresion -> . CADENA
    (22) expresion -> . ID
    (23) expresion -> . MENOS expresion
    (24) expresion -> . expresion MAS expresion
    (25) expresion -> . expresion MENOS expresion
    (26) expresion -> . expresion POR expresion
    (27) expresion -> . expresion DIVIDIDO expresion
    (28) expresion -> . expresion POTENCIA expresion
    (29) expresion -> . expresion MODULO expresion
    (30) expresion -> . tipo ID PTCOMA
    (31) expresion -> . ID ASIGNACION expresion PTCOMA
    (37) expresion -> . PRINTLN PARIZQ expresion PARDER
    (38) expresion -> . tipo ID ASIGNACION expresion PTCOMA
    (39) expresion -> . expresion OR_LOGICO expresion
    (40) expresion -> . expresion AND_LOGICO expresion
    (41) expresion -> . NOT_LOGICO expresion
    (42) expresion -> . expresion XOR_LOGICO expresion
    (43) expresion -> . BREAK PTCOMA
    (44) expresion -> . CONTINUE PTCOMA
    (45) expresion -> . expresion GE expresion
    (46) expresion -> . expresion LE expresion
    (47) expresion -> . expresion LT expresion
    (48) expresion -> . expresion GT expresion
    (49) expresion -> . expresion EQ expresion
    (50) expresion -> . expresion NE expresion
    (51) expresion -> . ID INCREMENTO
    (52) expresion -> . ID DECREMENTO
    (55) expresion -> . PARIZQ expresion PARDER
    (56) expresion -> . SWITCH PARIZQ expresion PARDER LLAVE_IZQ lista_cases_opt LLAVE_DER
    (63) expresion -> . ID ID
    (32) tipo -> . INT
    (33) tipo -> . FLOAT
    (34) tipo -> . CHAR
    (35) tipo -> . STRING
    (36) tipo -> . BOOL

    WHILE           shift and go to state 6
    DO              shift and go to state 8
    IF              shift and go to state 9
    ENTERO          shift and go to state 10
    DECIMAL         shift and go to state 11
    FOR             shift and go to state 12
    TRUE            shift and go to state 15
    FALSE           shift and go to state 16
    CARACTER        shift and go to state 17
    CADENA          shift and go to state 18
    ID              shift and go to state 14
    MENOS           shift and go to state 19
    PRINTLN         shift and go to state 20
    NOT_LOGICO      shift and go to state 21
    BREAK           shift and go to state 22
    CONTINUE        shift and go to state 23
    PARIZQ          shift and go to state 7
    SWITCH          shift and go to state 24
    INT             shift and go to state 27
    FLOAT           shift and go to state 28
    CHAR            shift and go to state 29
    STRING          shift and go to state 30
    BOOL            shift and go to state 31

    expresion                      shift and go to state 50
    tipo                           shift and go to state 13

state 8

    (10) expresion -> DO . LLAVE_IZQ lista_expresiones LLAVE_DER WHILE PARIZQ expresion PARDER PTCOMA

    LLAVE_IZQ       shift and go to state 51


state 9

    (11) expresion -> IF . PARIZQ expresion PARDER LLAVE_IZQ lista_expresiones LLAVE_DER
    (12) expresion -> IF . PARIZQ expresion PARDER LLAVE_IZQ lista_expresiones LLAVE_DER ELSE LLAVE_IZQ lista_expresiones LLAVE_DER
    (13) expresion -> IF . PARIZQ expresion PARDER LLAVE_IZQ lista_expresiones LLAVE_DER ELSE expresion

    PARIZQ          shift and go to state 52


state 10

    (14) expresion -> ENTERO .

    PTCOMA          reduce using rule 14 (expresion -> ENTERO .)
    MAS             reduce using rule 14 (expresion -> ENTERO .)
    MENOS           reduce using rule 14 (expresion -> ENTERO .)
    POR             reduce using rule 14 (expresion -> ENTERO .)
    DIVIDIDO        reduce using rule 14 (expresion -> ENTERO .)
    POTENCIA        reduce using rule 14 (expresion -> ENTERO .)
    MODULO          reduce using rule 14 (expresion -> ENTERO .)
    OR_LOGICO       reduce using rule 14 (expresion -> ENTERO .)
    AND_LOGICO      reduce using rule 14 (expresion -> ENTERO .)
    XOR_LOGICO      reduce using rule 14 (expresion -> ENTERO .)
    GE              reduce using rule 14 (expresion -> ENTERO .)
    LE              reduce using rule 14 (expresion -> ENTERO .)
    LT              reduce using rule 14 (expresion -> ENTERO .)
    GT              reduce using rule 14 (expresion -> ENTERO .)
    EQ              reduce using rule 14 (expresion -> ENTERO .)
    NE              reduce using rule 14 (expresion -> ENTERO .)
    $end            reduce using rule 14 (expresion -> ENTERO .)
    WHILE           reduce using rule 14 (expresion -> ENTERO .)
    DO              reduce using rule 14 (expresion -> ENTERO .)
    IF              reduce using rule 14 (expresion -> ENTERO .)
    ENTERO          reduce using rule 14 (expresion -> ENTERO .)
    DECIMAL         reduce using rule 14 (expresion -> ENTERO .)
    FOR             reduce using rule 14 (expresion -> ENTERO .)
    TRUE            reduce using rule 14 (expresion -> ENTERO .)
    FALSE           reduce using rule 14 (expresion -> ENTERO .)
    CARACTER        reduce using rule 14 (expresion -> ENTERO .)
    CADENA          reduce using rule 14 (expresion -> ENTERO .)
    ID              reduce using rule 14 (expresion -> ENTERO .)
    PRINTLN         reduce using rule 14 (expresion -> ENTERO .)
    NOT_LOGICO      reduce using rule 14 (expresion -> ENTERO .)
    BREAK           reduce using rule 14 (expresion -> ENTERO .)
    CONTINUE        reduce using rule 14 (expresion -> ENTERO .)
    PARIZQ          reduce using rule 14 (expresion -> ENTERO .)
    SWITCH          reduce using rule 14 (expresion -> ENTERO .)
    INT             reduce using rule 14 (expresion -> ENTERO .)
    FLOAT           reduce using rule 14 (expresion -> ENTERO .)
    CHAR            reduce using rule 14 (expresion -> ENTERO .)
    STRING          reduce using rule 14 (expresion -> ENTERO .)
    BOOL            reduce using rule 14 (expresion -> ENTERO .)
    PARDER          reduce using rule 14 (expresion -> ENTERO .)
    LLAVE_DER       reduce using rule 14 (expresion -> ENTERO .)
    DOSPUNTOS       reduce using rule 14 (expresion -> ENTERO .)
    DEFAULT         reduce using rule 14 (expresion -> ENTERO .)
    CASE            reduce using rule 14 (expresion -> ENTERO .)


state 11

    (15) expresion -> DECIMAL .

    PTCOMA          reduce using rule 15 (expresion -> DECIMAL .)
    MAS             reduce using rule 15 (expresion -> DECIMAL .)
    MENOS           reduce using rule 15 (expresion -> DECIMAL .)
    POR             reduce using rule 15 (expresion -> DECIMAL .)
    DIVIDIDO        reduce using rule 15 (expresion -> DECIMAL .)
    POTENCIA        reduce using rule 15 (expresion -> DECIMAL .)
    MODULO          reduce using rule 15 (expresion -> DECIMAL .)
    OR_LOGICO       reduce using rule 15 (expresion -> DECIMAL .)
    AND_LOGICO      reduce using rule 15 (expresion -> DECIMAL .)
    XOR_LOGICO      reduce using rule 15 (expresion -> DECIMAL .)
    GE              reduce using rule 15 (expresion -> DECIMAL .)
    LE              reduce using rule 15 (expresion -> DECIMAL .)
    LT              reduce using rule 15 (expresion -> DECIMAL .)
    GT              reduce using rule 15 (expresion -> DECIMAL .)
    EQ              reduce using rule 15 (expresion -> DECIMAL .)
    NE              reduce using rule 15 (expresion -> DECIMAL .)
    $end            reduce using rule 15 (expresion -> DECIMAL .)
    WHILE           reduce using rule 15 (expresion -> DECIMAL .)
    DO              reduce using rule 15 (expresion -> DECIMAL .)
    IF              reduce using rule 15 (expresion -> DECIMAL .)
    ENTERO          reduce using rule 15 (expresion -> DECIMAL .)
    DECIMAL         reduce using rule 15 (expresion -> DECIMAL .)
    FOR             reduce using rule 15 (expresion -> DECIMAL .)
    TRUE            reduce using rule 15 (expresion -> DECIMAL .)
    FALSE           reduce using rule 15 (expresion -> DECIMAL .)
    CARACTER        reduce using rule 15 (expresion -> DECIMAL .)
    CADENA          reduce using rule 15 (expresion -> DECIMAL .)
    ID              reduce using rule 15 (expresion -> DECIMAL .)
    PRINTLN         reduce using rule 15 (expresion -> DECIMAL .)
    NOT_LOGICO      reduce using rule 15 (expresion -> DECIMAL .)
    BREAK           reduce using rule 15 (expresion -> DECIMAL .)
    CONTINUE        reduce using rule 15 (expresion -> DECIMAL .)
    PARIZQ          reduce using rule 15 (expresion -> DECIMAL .)
    SWITCH          reduce using rule 15 (expresion -> DECIMAL .)
    INT             reduce using rule 15 (expresion -> DECIMAL .)
    FLOAT           reduce using rule 15 (expresion -> DECIMAL .)
    CHAR            reduce using rule 15 (expresion -> DECIMAL .)
    STRING          reduce using rule 15 (expresion -> DECIMAL .)
    BOOL            reduce using rule 15 (expresion -> DECIMAL .)
    PARDER          reduce using rule 15 (expresion -> DECIMAL .)
    LLAVE_DER       reduce using rule 15 (expresion -> DECIMAL .)
    DOSPUNTOS       reduce using rule 15 (expresion -> DECIMAL .)
    DEFAULT         reduce using rule 15 (expresion -> DECIMAL .)
    CASE            reduce using rule 15 (expresion -> DECIMAL .)


state 12

    (16) expresion -> FOR . PARIZQ tipo ID ASIGNACION expresion PTCOMA expresion PTCOMA expresion PARDER LLAVE_IZQ lista_expresiones LLAVE_DER
    (17) expresion -> FOR . PARIZQ ID ASIGNACION expresion PTCOMA expresion PTCOMA expresion PARDER LLAVE_IZQ lista_expresiones LLAVE_DER

    PARIZQ          shift and go to state 53


state 13

    (30) expresion -> tipo . ID PTCOMA
    (38) expresion -> tipo . ID ASIGNACION expresion PTCOMA

    ID              shift and go to state 54


state 14

    (22) expresion -> ID .
    (31) expresion -> ID . ASIGNACION expresion PTCOMA
    (51) expresion -> ID . INCREMENTO
    (52) expresion -> ID . DECREMENTO
    (63) expresion -> ID . ID

  ! shift/reduce conflict for ID resolved as shift
    PTCOMA          reduce using rule 22 (expresion -> ID .)
    MAS             reduce using rule 22 (expresion -> ID .)
    MENOS           reduce using rule 22 (expresion -> ID .)
    POR             reduce using rule 22 (expresion -> ID .)
    DIVIDIDO        reduce using rule 22 (expresion -> ID .)
    POTENCIA        reduce using rule 22 (expresion -> ID .)
    MODULO          reduce using rule 22 (expresion -> ID .)
    OR_LOGICO       reduce using rule 22 (expresion -> ID .)
    AND_LOGICO      reduce using rule 22 (expresion -> ID .)
    XOR_LOGICO      reduce using rule 22 (expresion -> ID .)
    GE              reduce using rule 22 (expresion -> ID .)
    LE              reduce using rule 22 (expresion -> ID .)
    LT              reduce using rule 22 (expresion -> ID .)
    GT              reduce using rule 22 (expresion -> ID .)
    EQ              reduce using rule 22 (expresion -> ID .)
    NE              reduce using rule 22 (expresion -> ID .)
    $end            reduce using rule 22 (expresion -> ID .)
    WHILE           reduce using rule 22 (expresion -> ID .)
    DO              reduce using rule 22 (expresion -> ID .)
    IF              reduce using rule 22 (expresion -> ID .)
    ENTERO          reduce using rule 22 (expresion -> ID .)
    DECIMAL         reduce using rule 22 (expresion -> ID .)
    FOR             reduce using rule 22 (expresion -> ID .)
    TRUE            reduce using rule 22 (expresion -> ID .)
    FALSE           reduce using rule 22 (expresion -> ID .)
    CARACTER        reduce using rule 22 (expresion -> ID .)
    CADENA          reduce using rule 22 (expresion -> ID .)
    PRINTLN         reduce using rule 22 (expresion -> ID .)
    NOT_LOGICO      reduce using rule 22 (expresion -> ID .)
    BREAK           reduce using rule 22 (expresion -> ID .)
    CONTINUE        reduce using rule 22 (expresion -> ID .)
    PARIZQ          reduce using rule 22 (expresion -> ID .)
    SWITCH          reduce using rule 22 (expresion -> ID .)
    INT             reduce using rule 22 (expresion -> ID .)
    FLOAT           reduce using rule 22 (expresion -> ID .)
    CHAR            reduce using rule 22 (expresion -> ID .)
    STRING          reduce using rule 22 (expresion -> ID .)
    BOOL            reduce using rule 22 (expresion -> ID .)
    PARDER          reduce using rule 22 (expresion -> ID .)
    LLAVE_DER       reduce using rule 22 (expresion -> ID .)
    DOSPUNTOS       reduce using rule 22 (expresion -> ID .)
    DEFAULT         reduce using rule 22 (expresion -> ID .)
    CASE            reduce using rule 22 (expresion -> ID .)
    ASIGNACION      shift and go to state 56
    INCREMENTO      shift and go to state 57
    DECREMENTO      shift and go to state 58
    ID              shift and go to state 55

  ! ID              [ reduce using rule 22 (expresion -> ID .) ]


state 15

    (18) expresion -> TRUE .
